--- a/Assignment13/style.css
+++ b/Assignment13/style.css
@@ -158,7 +158,6 @@
     padding: 8px;
     margin: 5px 40px;
     width: fit-content;
-    align-items: flex-end;
     border-radius: 12px;
     align-self: flex-end;
 
@@ -171,8 +170,8 @@
     padding: 8px;
     margin: 5px 40px;
     width: fit-content;
-    align-items: flex-start;
     border-radius: 12px;
+    align-self: flex-start;
 
 }
 .icon-small{
