--- a/Assignment13/style.css
+++ b/Assignment13/style.css
@@ -9,26 +9,62 @@
     display: flex;
     height: 100vh;
     justify-content: center;
-    background-color: #4e4a4a;
+    align-items: center;
+    flex-wrap: wrap;
+    background-color: #2a3942;
 
 }
 
 .sideBar{
-    border: 1px solid hsla(142, 90%, 49%, 0.1);
-
     height: 100vh;
-    align-items: center;
     display: flex;
-    width:60px;
     background-color: #202c33;
-    color: white;
     flex-direction: column;
     justify-content: space-between;
     
 }
 
+.secBar{
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    min-width:323px ;
+    background-color: #111b21;
+}
+
+.txtArea{
+    border: 1px solid hsla(142, 90%, 49%, 0.1);
+    flex: 2;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    max-width:850px ;
+    background-color: #111b21;
+    min-width: 324px;
+}
+
+
+
+
+.header{
+    display: flex;
+    flex-direction: column;
+    padding: 10px 10px;
+    height: 25vh;
+    background-color: #111b21;
+    min-width: 320px;
+}
+
+.header-item{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    color: white;
+    padding: 2px;
+}
+
 .msgBar{
-    width: 410px;
     background-color: #111b21;
     display: flex;
     flex-direction: column;
@@ -41,43 +77,16 @@
     color: white;
     padding: 15px 15px;
 }
-.txtArea{
-    border: 1px solid hsla(142, 90%, 49%, 0.1);
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    background-color: #111b21;
-    height: 100vh;
-    max-width:830px ;
 
-}
-.sideItem{
-    width: 20px;
-    padding: 5px;
-
-}
 .chat-item{
     color: #b4b4b4;
     margin: 3px 2px 2px 10px;
     border-radius: 9999px;
-    padding: 8px 12px;
+    padding: 8px 7px;
     background-color: #202c33;
 }
-.header{
-    padding: 0px 10px;
-    height: 25vh;
-    background-color: #111b21;
-    width: 100%;
 
-}
-.header-item{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    color: white;
-}
+
 .img{
     height: 35px; width: 35px; border-radius: 50%; margin:0 10px;
 }
@@ -93,13 +102,7 @@
     display: flex; flex-direction: row; justify-content: space-between; gap: 10px;
 
 }
-.container{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  align-items: center;
 
-}
 
 .spanS {
     background-color:  #00a884;
